--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -143,7 +143,7 @@
                 </button>
 
                 <div class="dropdown-menu dropdown-menu-right notSidebar" style="width: fit-content;">
-                <a class="dropdown-item notSidebar" href="#">
+                <a class="dropdown-item notSidebar" href="/profile">
                     <i class="fas fa-user-circle fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Profile</a>
                 </a>
 
