Removed deactive user option on profile page (forgot to remove) + Minor UI changes on req.flash (for non-logged in pages)

--- a/views/initialize_pass.hbs
+++ b/views/initialize_pass.hbs
@@ -39,7 +39,9 @@
             {{!-- <input type="hidden" name="cur_date" id="cur_date" value="{{cur_date}}"> --}}
             <h3 class="fw-normal mb-3 pb-0" style="letter-spacing: 1px;">Change Password</h3>
 
-            {{> messages}}
+            <div class="container" style="width: 450px; padding: 0px">
+              {{> messages}}
+            </div>
 
            	<div class="form-outline mb-4">
               <input type="hidden" name="username" id="username" value="{{username}}">
