--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -29,7 +29,7 @@
 
 
                     {{!-- <div class="btn-group" role="group"><button class="btn btn-primary" type="button" style="background: #BDBE14;font-weight: bold;border-style: none;border-left-color: rgba(78,115,223,0);border-radius: 10px;padding: 4px 10px;">Farms</button><a class="btn btn-primary" role="button" style="margin-left: 10px;background: rgba(189,190,20,0);border-style: none;border-color: var(--bs-pink);padding: 4px 10px;" href="Materials.html">Materials</a></div> --}}
-                    {{#if writeable}}
+                    {{!-- {{#if writeable}}
                     {{#compareTwoValues this.access_level 0 operator='!='}}
                     <div class="dropdown no-arrow" style="padding-top: 5px">
                         <button id="more" class="btn btn-primary btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">
@@ -37,12 +37,11 @@
                         </button>
                         <div class="dropdown-menu notSidebar shadow dropdown-menu-end animated--fade-in">
                             <a class="dropdown-item notSidebar" href="/deactivateAccount?username={{username}}&status=deactivate">&nbsp;Deactivate User</a>
-                            {{!-- <div class="dropdown-divider"></div> --}}
                     
                         </div>
                     </div>
                     {{/compareTwoValues}}
-                    {{/if}}
+                    {{/if}} --}}
                 </div>
                 {{!-- END CARD HEADER --}}
 
