--- a/views/forgot_pass.hbs
+++ b/views/forgot_pass.hbs
@@ -34,7 +34,9 @@
             {{!-- <input type="hidden" name="cur_date" id="cur_date" value="{{cur_date}}"> --}}
             <h3 class="fw-normal mb-3 pb-0" style="letter-spacing: 1px;">Send OTP to</h3>
 
-            {{> messages}}
+            <div class="container" style="width: 450px; padding: 0px">
+              {{> messages}}
+            </div>
 
             <div class="form-outline mb-4">
               <label class="form-label" for="username"></label>
