--- a/views/login.hbs
+++ b/views/login.hbs
@@ -17,8 +17,10 @@
           <form action="/login" method="post" style="width: 23rem;">
             <input type="hidden" name="cur_date" id="cur_date" value="{{cur_date}}">
             <h3 class="fw-normal mb-3 pb-0" style="letter-spacing: 1px;">Log in</h3>
-
-            {{> messages}}
+            
+            <div class="container" style="width: 450px; padding: 0px">
+              {{> messages}}
+            </div>
 
             <div class="form-outline mb-4">
               <label class="form-label" for="form2Example18"></label>
