--- a/views/user_management.hbs
+++ b/views/user_management.hbs
@@ -25,6 +25,7 @@
         <h3 class="text-dark mb-0">{{title}}</h3><a class="btn btn-primary disabled btn-sm d-none d-sm-inline-block" role="button" style="background: rgba(78,115,223,0);color: #332c1f;border-color: rgba(51,44,31,0);">&nbsp;<br>&nbsp;<i class="far fa-clock" style="margin-right: 5px;"></i>{{cur_date}}<br><br></a>
     </div>
 
+
     <div class="row">
 
         <div class="col-lg-12 col-xl-12 col-xxl-12">
@@ -49,9 +50,10 @@
                             {{!-- TAB CONTENT --}}
                             <form action="/account_registration" method="post">
                             <div class="tab-content" id="nav-tabContent">
-
+          
                                 {{!-- TAB 1 --}}
                                 <div class="tab-pane fade show active" id="activeUsers" role="tabpanel" aria-labelledby="active-users-tab">
+                                    {{> messages}}
                                     <table class="table table-striped table-bordered tablesorter" id="activeUsersTable">
                                       <thead class="thead-dark" style="background-color: #212529 !important">
                                       <tr>
@@ -96,6 +98,11 @@
                                                         {{#compareTwoValues this.access_level 0 operator='!='}}
                                                         <div class="dropdown-divider"></div>
                                                         <a class="dropdown-item notSidebar" href="/deactivateAccount?username={{this.username}}&status=deactivate">&nbsp;Deactivate</a>
+                                                        {{/compareTwoValues}}
+
+                                                        {{#compareTwoValues this.otp null operator='!='}}
+                                                        <div class="dropdown-divider"></div>
+                                                        <a class="dropdown-item notSidebar" href="/resendOTP?username={{this.username}}&status=resend">&nbsp;Resend OTP</a>
                                                         {{/compareTwoValues}}
                                                     </div>
                                                 </div>
