Made OTP null after updating user/profile updates + Minor UI Changes on titles and select inputs

--- a/views/user_management.hbs
+++ b/views/user_management.hbs
@@ -180,7 +180,7 @@
                                           <td class="text-left"><div>{{this.position}}</div><div class="text-xs text-muted">{{#if this.farm_name}}{{this.farm_name}}{{else}}Unassigned{{/if}}</div></td>
                                           <td>0{{this.phone_number}}</td>
                                           <td>
-                                            <select name="register_level" disabled required>
+                                            <select class="form-select" name="register_level" disabled required>
                                               <option selected value="">...</option>
                                               <option value="0">Administrator</option>
                                               <option value="1">Office Worker</option>
