--- a/views/sms_subscriptions.hbs
+++ b/views/sms_subscriptions.hbs
@@ -59,7 +59,7 @@
                                             <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-subscriptions .item-subscriptions" href="#accordion-subscriptions .item-subscriptions" style="font-size: 16px;color: #584C33!important;font-weight: bold;">Create New Subscription</a></h5>
                                         </div> --}}
 
-                                        <span style="color: #657429; padding: 10px; font-weight:bold">NO CREATION OF SUBSCRIPTION (Should be done through SMS)<br> send "INFO" to 21585119</span>
+                                        <span style="color: #657429; padding: 10px; font-weight:bold">NO CREATION OF SUBSCRIPTION (Should be done through SMS)<br> Send "INFO" to 21663543</span>
                                         <div class="collapse item-subscriptions" role="tabpanel" data-parent="#accordion-subscriptions">
                                             
                                         <div class="card-body" style="color: #332c1f;">
@@ -186,7 +186,7 @@
                                             <tr>
                                                 <td>{{employee_id}}1</td>
                                                 <td>{{first_name}} {{last_name}}</td>
-                                                <td>{{phone_number}}</td>
+                                                <td>0{{phone_number}}</td>
                                                 <td>{{farm_name}}</td>
                                                 <td>{{position}}</td>
                                                 <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis; max-width: 150px;">{{access_token}}</td>
