Added register new employee and system setting table

--- a/views/user_management.hbs
+++ b/views/user_management.hbs
@@ -43,6 +43,8 @@
                         <li class="nav-item"><a id="inactive-subscriptions-tab" class="nav-link" data-toggle="tab" href="#inactiveUsers"role="tab" aria-controls="inactiveUsers" aria-selected="false" 
                             style="background: #F0F0F0;">Inactive Employees</a></li>
                     </ul>
+
+                    <button class="btn btn-primary float-right" type="button" id="new_employee" onclick="window.location='/user_management/add_employee'">Add Employee</button>
         
                     </div>
 
