--- a/views/pest_disease_details.hbs
+++ b/views/pest_disease_details.hbs
@@ -58,6 +58,9 @@
 
                         </div>
                     </div>
+                    <div class="col" >
+                        <img src="{{pd.image_url}}" width="auto" height="300px" id="user" style="float: right; margin-right: 50px;">
+                    </div>
                 </div>
             <div class="row" style="padding-right: 20px;">
                 <div class="col" style="padding-top: 5px; margin-left: 10px;">
